将抽签集显示由TextBox改成ListBox，添加其他抽签

--- a/Draw/Drawing.csproj
+++ b/Draw/Drawing.csproj
@@ -58,6 +58,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdvanceWindow.xaml.cs">
+      <DependentUpon>AdvanceWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="DrawSet.cs" />
     <Compile Include="SettingWindow.xaml.cs">
@@ -69,6 +72,10 @@
       <DependentUpon>StringResource.resx</DependentUpon>
     </Compile>
     <Page Include="AboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AdvanceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
